--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -13,12 +13,19 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
-    - name: Install dependencies
+    - name: Install PostgreSQL
+      uses: harmon758/postgresql-action@v1
+      with:
+        postgresql db: jwthenticator
+        postgresql password: my-password
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install poetry
         poetry config virtualenvs.create false
         poetry install
     - name: Run Pytest
+      env:
+        DB_PASS: my-password
       run: |
         python -m pytest jwthenticator
