--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -10,7 +10,7 @@ services:
             - POSTGRES_PASSWORD="my-postgres-pass"
 
     jwthenticator:
-        image: jwthenticator
+        image: clarotyltd/jwthenticator
         ports:
             - 8080:8080
         network_mode: host
