--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -85,5 +85,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-          repository: ${{ secrets.DOCKERHUB_USERNAME }}/${{ IMAGE_NAME }}
+          repository: ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME
           readme-filepath: ./README.md
