--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ asyncalchemy = "^1.1.1"
 sqlalchemy-utils = ">=0.33.0, < 1.0.0"
 pg8000 = "1.16.5"   # Constant due to - https://github.com/tlocke/pg8000/issues/53
 aiohttp = "^3.6.0"
-pyjwt = "^1.7"
+pyjwt = ">= 1.7, < 3.0.0"
 cryptography = ">= 2.8, < 4.0.0"   # Required for pyjwt
 marshmallow = "^3.9"
 marshmallow-dataclass = "^8.3"
