--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pytest-aiohttp = "^0.3"
 freezegun = "^1.0"
 pyjwt = "^2.0"
 diagrams = "^0.17.0"
+mock = "^4.0.3"
 
 
 [tool.pylint.message_control]
