--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ freezegun = "^1.0"
 pyjwt = "^2.0"
 diagrams = "^0.17.0"
 mock = "^4.0.3"
+async_generator = "^1.10"
 
 
 [tool.pylint.message_control]
