docker compose file changed so postgres container uses POSTGRES_HOST_AUTH_METHOD=trust and POSTGRES_DB=jwthenticator- and set environment variables for DB_NAME and DB_HOST in jwthenticator container- and removed DB environment variables from consts.py- THIS IS FOR LOCAL DEVELOPMENT ONLY

--- a/examples/docker-compose.yml
+++ b/examples/docker-compose.yml
@@ -1,20 +1,22 @@
 version: "3"
 
-services:
+# NOTE:  This compose file is for LOCAL connections on a single-user workstation ONLY
+
+services:      
     postgres:
         image: postgres
         ports:
             - 5432:5432
-        network_mode: host
         environment:
-            - POSTGRES_PASSWORD="my-postgres-pass"
+            - POSTGRES_HOST_AUTH_METHOD=trust
+            - POSTGRES_DB=jwthenticator
 
     jwthenticator:
         image: clarotyltd/jwthenticator
         ports:
             - 8080:8080
-        network_mode: host
         environment:
-            - DB_PASS="my-postgres-pass"
+            - DB_NAME=jwthenticator
+            - DB_HOST=postgres
         depends_on:
             - postgres
