--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ exclude = ["jwthenticator/tests"]
 
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.9"
 sqlalchemy = ">= 1.2.19, < 1.4.0"
 asyncalchemy = "^1.1.1"
 sqlalchemy-utils = ">=0.33.0, < 1.0.0"
@@ -19,10 +19,10 @@ pg8000 = "1.16.5"   # Constant due to - https://github.com/tlocke/pg8000/issues/
 aiohttp = "^3.6.0"
 pyjwt = ">= 1.7, < 3.0.0"
 cryptography = ">= 2.8, < 39.0.0"   # Required for pyjwt
-marshmallow = ">= 3.9, < 3.13"
+marshmallow = "3.17.0"
 marshmallow-dataclass = "^8.3"
 pycryptodomex = "^3.9"
-dataclasses = { version = "^0.7", python = "~3.6" }
+dataclasses = { version = "^0.7", python = "~3.9" }
 environs = "^9.3.1"
 
 
