Remove limit from marshmallow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ pg8000 = "1.16.5"   # Constant due to - https://github.com/tlocke/pg8000/issues/
 aiohttp = "^3.6.0"
 pyjwt = ">= 1.7, < 3.0.0"
 cryptography = ">= 2.8, < 39.0.0"   # Required for pyjwt
-marshmallow = "3.17.0"
+marshmallow = "^3.9"
 marshmallow-dataclass = "^8.3"
 pycryptodomex = "^3.9"
 environs = "^9.3.1"
