--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ exclude = ["jwthenticator/tests"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-sqlalchemy = ">= 1.2.19, < 1.4.0"
+sqlalchemy = "1.4.0"
 asyncalchemy = "^1.1.1"
 sqlalchemy-utils = ">=0.33.0, < 1.0.0"
 pg8000 = "1.16.5"   # Constant due to - https://github.com/tlocke/pg8000/issues/53
