Fix tests and queries to work with sqlalchemy 1.4.0 async

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pycryptodomex = "^3.9"
 environs = "^9.3.1"
 asyncpg = "^0.28.0"
 asyncio = "^3.4.3"
+nest-asyncio = "^1.5.7"
 
 
 [tool.poetry.dev-dependencies]
