--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,10 @@ exclude = ["jwthenticator/tests"]
 python = "^3.9"
 sqlalchemy = "^1.4.0"
 sqlalchemy-utils = ">=0.33.0, < 1.0.0"
-pg8000 = "1.16.6"   # Constant due to https://github.com/tlocke/pg8000/issues/53
+pg8000 = "1.16.6"  # Constant due to -  https://github.com/tlocke/pg8000/issues/53
 aiohttp = "^3.9.5"
 pyjwt = ">= 1.7, < 3.0.0"
-cryptography = "==42.0.8" #  Required for pyjwt
+cryptography = "==42.0.8"  # Required for pyjwt
 marshmallow = "^3.9"
 marshmallow-dataclass = "^8.3"
 pycryptodomex = "^3.9"
