--- a/.github/workflows/python-lint.yml
+++ b/.github/workflows/python-lint.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
+        pip install poetry setuptools==75.5.0
         poetry config virtualenvs.create false
         poetry install
     - name: Analysing the code with pylint + mypy
