--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
+        pip install poetry setuptools==75.5.0
         poetry config virtualenvs.create false
         poetry install
     - name: Run Pytest
