--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ marshmallow-dataclass = "^8.3"
 pycryptodomex = "^3.9"
 environs = "^9.3.1"
 asyncpg = { version = "^0.28.0", markers = "platform_python_implementation == 'CPython'" } # pypy can not build asyncpg
+aiosqlite = "^0.20.0"
 
 
 [tool.poetry.dev-dependencies]
