--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ exclude = ["jwthenticator/tests"]
 
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.9,<4.0"
 sqlalchemy = ">=2.0, < 2.1.0"
 sqlalchemy-utils = ">=0.33.0, < 1.0.0"
 pg8000 = "1.16.6"  # Constant due to -  https://github.com/tlocke/pg8000/issues/53
